OJ1.7/tmp_files/tmp_1621777461.err
./tmp_files/tmp_1621777461.cpp: In member function ‘std::string Slution::slute(std::string)’:
./tmp_files/tmp_1621777461.cpp:12:1: error: ‘sdlaf’ was not declared in this scope
 sdlaf
 ^~~~~
./tmp_files/tmp_1621777461.cpp:12:1: note: suggested alternative: ‘sscanf’
 sdlaf
 ^~~~~
 sscanf
./tmp_files/tmp_1621777461.cpp:13:9: warning: no return statement in function returning non-void [-Wreturn-type]
         }
         ^
